--- a/ProfileManifest/com.secondsonconsulting.baseline.plist
+++ b/ProfileManifest/com.secondsonconsulting.baseline.plist
@@ -5,7 +5,7 @@
 	<key>pfm_app_url</key>
 	<string>https://github.com/SecondSonConsulting/Baseline/releases</string>
 	<key>pfm_description</key>
-	<string>Baseline by Second Son Consulting Configuration</string>
+	<string>macOS Baseline by Interconnekt</string>
 	<key>pfm_documentation_url</key>
 	<string>https://github.com/SecondSonConsulting/Baseline/wiki</string>
 	<key>pfm_domain</key>
@@ -26,7 +26,7 @@
 			<key>pfm_description</key>
 			<string>Description of the payload.</string>
 			<key>pfm_description_reference</key>
-			<string>Optional. A human-readable description of this payload. This description is shown on the Detail screen.</string>
+			<string>We're configuring a secure baseline for your Mac!.</string>
 			<key>pfm_name</key>
 			<string>PayloadDescription</string>
 			<key>pfm_title</key>
